--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -312,9 +312,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
           <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-table"></i>
+              <i class="nav-icon fas fa-sliders-h"></i>
               <p>
-                Seguridad
+                Configuración
                 <i class="fas fa-angle-left right"></i>
               </p>
             </a>
@@ -322,35 +322,73 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <ul class="nav nav-treeview">
 
               <li class="nav-item">
-                <a href="../examples/roles.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Permisos Establecidos</p>
+                <a href="#" class="nav-link">
+                  <i class="nav-icon fas fa-key"></i>
+                  <p>
+                    Seguridad
+                    <i class="fas fa-angle-left right"></i>
+                  </p>
                 </a>
-              </li>
-
-              <li class="nav-item">
-                <a href="../examples/usuariosroles.html" class="nav-link">
+    
+                <ul class="nav nav-treeview">
+    
+                  <li class="nav-item">
+                    <a href="../examples/roles.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Permisos Establecidos</p>
+                    </a>
+                  </li>
+    
+                  <li class="nav-item">
+                    <a href="../examples/usuariosroles.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Usuarios Roles</p>
+                    </a>
+                  </li>    
+    
+                  <li class="nav-item">
+                  <a href="../examples/BackUp.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Usuarios Roles</p>
-                </a>
-              </li>    
-
-              <li class="nav-item">
-              <a href="../examples/BackUp.html" class="nav-link">
-              <i class="far fa-circle nav-icon"></i>
-              <p>BackUp</p>
-              </a>
-              </li>
-              
-
-              <li class="nav-item">
-                <a href="../examples/Bitacora.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Bitacora</p>
+                  <p>BackUp</p>
                   </a>
+                  </li>
+                  
+    
+                  <li class="nav-item">
+                    <a href="../examples/Bitacora.html" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>Bitacora</p>
+                      </a>
                   </li>               
+            </ul>
+          </li>
+
+                            
         </ul>
-      </li>
+        <ul class="nav nav-treeview">
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-edit"></i>
+              <p>
+                Personalizar
+                <i class="fas fa-angle-left right"></i>
+              </p>
+            </a>
+
+            <ul class="nav nav-treeview">
+
+              <li class="nav-item">
+                <a href="../examples/Impuesto.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Impuesto</p>
+                </a>
+              </li>             
+            </ul>
+          </li>
+                      
+        </ul>
+    </li>
              
                 <li class="nav-item">
                   <a href="../examples/contactanos.html" class="nav-link">
@@ -775,8 +813,6 @@ aria-hidden="true">
 
 
 
-
-
 <!--MODAL AGREGAR NUEVO CLIENTE-->
 
 
@@ -1080,16 +1116,6 @@ aria-hidden="true">
     <!--Fin del Modal-->
   </div>
 </div>
-</div>
-
-
-
-
-
-
-
-
-
 
 
 
